# Apoptotic

./: .dockerignore  .gitignore  ASSESSMENT_REPORT.md  BUG_REPORTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PLUGIN_TUTORIAL.md  README.md  docker-compose.yml  prometheus.yml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
config/: default.toml  production.toml  rpi5.toml
crates/mc-admin/: Cargo.toml
crates/mc-admin/src/: console.rs  lib.rs  metrics.rs  rcon.rs
crates/mc-admin/tests/: rcon_test.rs
crates/mc-command/: Cargo.toml
crates/mc-command/src/: dispatcher.rs  lib.rs  parser.rs
crates/mc-command/src/commands/: admin.rs  advanced.rs  execute.rs  help.rs  info.rs  mod.rs  msg.rs  player.rs  scoreboard.rs  world.rs
crates/mc-command/tests/: command_test.rs
crates/mc-core/: Cargo.toml  build.rs
crates/mc-core/src/: auth.rs  biome.rs  block.rs  constants.rs  effect.rs  error.rs  item.rs  item_registry.in.rs  lib.rs  position.rs  sound.rs  team.rs  types.rs  world_state.rs
crates/mc-network/: Cargo.toml
crates/mc-network/src/: c2s_handlers.rs  connection.rs  encryption.rs  handler_sync.rs  lan_broadcast.rs  lib.rs  listener.rs  packet_io.rs  play_loop.rs  rate_limiter.rs
crates/mc-persistence/: Cargo.toml
crates/mc-persistence/src/: lib.rs  player_data.rs  save_manager.rs  world_save.rs
crates/mc-player/: Cargo.toml
crates/mc-player/src/: advancement.rs  anvil.rs  armor_stand.rs  beacon.rs  bossbar.rs  breeding.rs  brewing.rs  container.rs  decoration.rs  enchant.rs  firework.rs  fishing.rs  food.rs  furnace.rs  gamemode.rs  inventory.rs  lib.rs  map.rs  mob.rs  pathfind.rs  player.rs  raid.rs  recipe.rs  riding.rs  session.rs  statistics.rs  taming.rs  villager.rs
crates/mc-plugin/: Cargo.toml
crates/mc-plugin/src/: datapack.rs  lib.rs  plugin.rs  wasm.rs
crates/mc-protocol/: Cargo.toml
crates/mc-protocol/benches/: codec.rs
crates/mc-protocol/src/: codec.rs  lib.rs  registry.rs  state.rs  varint.rs
crates/mc-protocol/src/packets/: config.rs  handshake.rs  login.rs  mod.rs  play.rs  status.rs
crates/mc-protocol/tests/: roundtrip.rs
crates/mc-server/: Cargo.toml
crates/mc-server/src/: anticheat.rs  app.rs  async_chunk.rs  config.rs  context.rs  main.rs  metrics.rs  tick.rs
crates/mc-server/tests/: e2e_gameplay_test.rs  e2e_login_test.rs  integration_test.rs  ping_test.rs
crates/mc-server/tests/common/: bot.rs
crates/mc-world/: Cargo.toml
crates/mc-world/benches/: chunk_gen.rs
crates/mc-world/src/: anvil.rs  chunk.rs  chunk_store.rs  crops.rs  fluid.rs  generator.rs  lib.rs  lighting.rs  paletted.rs  physics.rs  redstone.rs  world.rs
crates/mc-world/tests/: anvil_test.rs
datapacks/vanilla_extras/: pack.mcmeta
datapacks/vanilla_extras/data/minecraft/recipes/: shield.json
docker/: Dockerfile  Dockerfile.native  docker-compose.yml
plugins/: registry.toml
scripts/: backup.sh  benchmark.sh  bolt-optimize.sh  ci-optimize.sh  dedup_apply.py  dedup_registry.py  deploy.sh  extract_items.py  fix_protocol_776.sh  mc-server.service  minecraft-server.service  optimize-profile.sh  setup-rpi.sh  test_ping.py  update-minecraft-data.sh
