[package]
name = "mc-command"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mc-core = { workspace = true }
mc-player = { workspace = true }
mc-world = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
