[package]
name = "mc-network"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mc-core = { workspace = true }
mc-protocol = { workspace = true }
mc-world = { workspace = true }
mc-player = { workspace = true }
mc-command = { workspace = true }
mc-persistence = { workspace = true }
mc-plugin = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
flate2 = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
fastrand = { workspace = true }
rsa = { workspace = true }
aes = { workspace = true }
cfb-mode = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
