[package]
name = "mc-player"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mc-core = { workspace = true }
mc-world = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
fastrand = { workspace = true }
