[package]
name = "mc-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mc-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
fastnbt = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "codec"
harness = false
