[package]
name = "mc-world"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mc-core = { workspace = true }
mc-protocol = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
fastrand = { workspace = true }
flate2 = { workspace = true }
fastnbt = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
lz4_flex = { workspace = true }
noise = { workspace = true }
arc-swap = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "chunk_gen"
harness = false
